@@ -1,0 +1,40 @@
+# All colors must be in the form of '#rrggbb' or '#rgb'.
+# You cannot use color names.
+
+input-text:
+  font-family: 'Lucida Grande'
+  font-size: 13.0
+  background-color: '#fff'
+  color: '#000'
+member-list:
+  font-family: 'Lucida Grande'
+  font-size: 13.0
+  color: '#000'
+  background-color: '#fff'
+  operator:
+    color: '#000'
+server-tree:
+  font-family: 'Lucida Grande'
+  font-size: 13.0
+  background-color: '#e5edf7'
+  highlight:
+    color: '#f0f'
+  newtalk:
+    color: '#f00'
+  unread:
+    color: '#00f'
+  normal:
+    active:
+      color: '#000'
+    inactive:
+      color: '#ccc'
+  selected:
+    active:
+      color: '#000'
+    inactive:
+      color: '#888'
+    background:
+      top-line-color: '#adbbd0'
+      bottom-line-color: '#8c98b0'
+      top-color: '#adbbd0'
+      bottom-color: '#98aac4'
